TEST_PROGRAMS/VALID_TYPECHECK/add_floats.go
package main;

func main() {
    
    //this operation is allowed
    var c float64 = 1.0;
    var x float64 = c+c;
    print(x);
}
