TEST_PROGRAMS/INVALID/04/6.go
package main

func main() {
    //Invalid float
    var x = 1 .1
    x++ // "use" x
}
